# cartesia-mcp

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml  release-please-config.json  smithery.yaml
.cursor/rules/: conventional-commits.mdc
.github/: commitlint.config.mjs
.github/workflows/: conventional-commits.yml  publish-pypi.yml  release-please.yml  test.yml
cartesia_mcp/: __init__.py  api_version.py  client_headers.py  clients.py  config.py  constants.py  credentials.py  extra_api.py  fastmcp_server.py  hosted.py  oauth_provider.py  oauth_store.py  request_options.py  rest_client.py  sdk_setup.py  server.py  tool_visibility.py  utils.py
cartesia_mcp/custom_types/: __init__.py  pronunciation.py  tool_results.py  tool_type.py
scripts/: test_all_tools.py
src/: __init__.py  server.py  utils.py
src/cartesia-mcp/: __init__.py  server.py
src/custom_types/: tool_type.py
tests/: conftest.py  test_bugbot_regressions.py  test_client_attribution.py  test_client_headers.py  test_config.py  test_files_api.py  test_hosted_credentials.py  test_hosted_mode.py  test_list_voices.py  test_list_voices_output_schema.py  test_oauth_provider.py  test_oauth_store.py  test_output_schema_nullability.py  test_request_options.py  test_sdk_setup.py  test_sdk_websocket_headers.py  test_speech_to_text_modes.py  test_tool_annotations.py  test_tool_visibility.py  test_usage_credits_api.py
