[project]
name = "cartesia-mcp"
version = "0.10.0"
description = "The official Cartesia MCP server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cartesia[websockets]>=3.2.0,<4.0.0",
    "httpx>=0.28.1",
    "mcp[cli]>=1.27.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.34.0",
]

[project.scripts]
cartesia-mcp = "cartesia_mcp.server:main"

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"
